<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Nav_Movie"
        android:icon="@drawable/ic_local_movies_black_24dp"
        android:title="Movies" />

    <item
        android:id="@+id/Nav_TvShows"
        android:icon="@drawable/ic_live_tv_black_24dp"
        android:title="Tv Shows" />

    <item
        android:id="@+id/Nav_Fav"
        android:icon="@drawable/ic_favorites"
        android:title="Favorite" />




</menu>